<resources>
    <string name="app_name">Practica 1</string>
    <string name="form">Formulario</string>
    <string name="required_field">Campo requerido</string>
    <string name="email">Correo electrónico</string>
    <string name="password">Contraseña</string>
    <string name="repeat_password">Repita la contraseña</string>
    <string name="save">Guardar</string>
    <string name="info">Información del Usuario: </string>
    <string name="password_error">Las contraseñas no son iguales</string>
    <string name="email_error">Debe digitar un correo electrónico</string>
    <string name="genre">Género</string>
    <string name="female">Femenino</string>
    <string name="male">Masculino</string>
    <string name="hobbies">Pasatiempos</string>
    <string name="sport">Deporte</string>
    <string name="read">Leer</string>
    <string name="eat">Comer</string>
    <string name="dance">Bailar</string>
</resources>